// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkout class Should add items and discounts 1`] = `
Checkout {
  "cartItems": Array [
    Object {
      "amount": 3,
      "code": "TSHIRT",
    },
    Object {
      "amount": 4,
      "code": "MUG",
    },
    Object {
      "amount": 1,
      "code": "CAP",
    },
  ],
  "discounts": Array [
    Object {
      "discount": 3,
      "name": "x3 Shirt offer",
    },
    Object {
      "discount": 10,
      "name": "2x1 Mug offer",
    },
  ],
  "totalItems": 8,
}
`;

exports[`Checkout class Should match default state 1`] = `
Checkout {
  "cartItems": Array [],
  "discounts": Array [],
  "totalItems": 0,
}
`;

exports[`Checkout class Should set specific amount of product 1`] = `
Checkout {
  "cartItems": Array [
    Object {
      "amount": 5,
      "code": "TSHIRT",
    },
    Object {
      "amount": 99,
      "code": "MUG",
    },
    Object {
      "amount": 0,
      "code": "CAP",
    },
  ],
  "discounts": Array [
    Object {
      "discount": 5,
      "name": "x3 Shirt offer",
    },
    Object {
      "discount": 300,
      "name": "2x1 Mug offer",
    },
  ],
  "totalItems": 104,
}
`;
